external-crates/move/crates/move-package-alt/tests/data/invalid_environment2/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: Error while loading `"tests/data/invalid_environment2/Move.toml"`
  ┌─ "tests/data/invalid_environment2/Move.toml":8:1
  │
8 │ ~124512 = "35834a8a"
  │ ^
  │
  = invalid key
